# DS_Final_Project

./: .gitignore  Belaynesh_Mossie_EP7203363_Predicting_MH_disorder.ipynb  Final_ppt.pptx  README.md  my_project.code-workspace  pyproject.toml  without_possibly.csv
Data/: filtered_data.csv
Notebooks/: data_analysis.ipynb  evaluation.ipynb  feature_importance.ipynb  model_comparison.ipynb
Results/: model_evaluation_results.csv
Tests/: test_functions.py
src/: Train.py  logger.py  main.py  models.py  preprocess.py  utils.py
